# Quant_IV

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_log.txt  debug_arb.py  debug_iv.py  portfolio_engine.py  pyproject.toml  quantiv.proto  render.yaml  replace_currency.py  requirements.txt  scratch.py  setup.py  test_history.py
bindings/: CMakeLists.txt  bind_binomial.cpp  bind_black_scholes.cpp  bind_greeks.cpp  bind_monte_carlo.cpp  bind_option.cpp  bind_portfolio.cpp  bind_pro_engine.cpp  bind_solvers.cpp  bind_trinomial.cpp  module.cpp
dashboard/: app.py  grpc_client.py
dashboard/assets/: portfolio.css  styles.css  subscription.css
dashboard/callbacks/: __init__.py  comparison_callbacks.py  greeks_callbacks.py  live_callbacks.py  model_compare_callbacks.py  pricer_callbacks.py  strategy_callbacks.py  surface_callbacks.py
dashboard/components/: __init__.py  advanced_visuals.py  navbar.py  parameter_panel.py  result_card.py  tree_visualization.py
dashboard/layouts/: __init__.py  comparison_page.py  greeks_page.py  home.py  intro_page.py  live_page.py  model_compare_page.py  models_menu.py  portfolio.py  pricer_page.py  strategy_page.py  subscription.py  surface_page.py
docs/: api_reference.md  architecture.md  build_guide.md
engine/: CMakeLists.txt
engine/include/quantiv/core/: market_data.hpp  option.hpp  portfolio_engine.h  pricing_result.hpp
engine/include/quantiv/greeks/: greeks_engine.hpp
engine/include/quantiv/models/: binomial.hpp  black_scholes.hpp  monte_carlo.hpp  pro_engine.hpp  trinomial.hpp
engine/include/quantiv/solvers/: implied_vol.hpp
engine/include/quantiv/utils/: constants.hpp  math_utils.hpp
engine/src/core/: option.cpp  portfolio_engine.cpp
engine/src/greeks/: greeks_engine.cpp
engine/src/models/: binomial.cpp  black_scholes.cpp  monte_carlo.cpp  pro_engine.cpp  trinomial.cpp
engine/src/server/: quantiv_server.cpp
engine/src/solvers/: implied_vol.cpp
engine/src/utils/: math_utils.cpp
quantiv/: __init__.py  portfolio_engine.py  quantiv_pb2.py  quantiv_pb2_grpc.py
quantiv/analytics/: __init__.py  greeks_analyzer.py  iv_surface.py  risk_reporter.py  strategy_builder.py
quantiv/data/: __init__.py  cache.py  live_service.py  market_source.py  option_chain.py  scheduler.py
quantiv/data/providers/: __init__.py  base.py  polygon.py  yahoo.py
quantiv/pricing/: __init__.py  pricer.py  quantiv_pro_engine.py  validators.py
quantiv/utils/: __init__.py  formatting.py
scripts/: benchmark_grpc.py  build.bat  build.sh  calculate_iv.py  run_dashboard.py
tests/: conftest.py
tests/cpp/: CMakeLists.txt  test_binomial.cpp  test_black_scholes.cpp  test_monte_carlo.cpp  test_trinomial.cpp
tests/python/: test_analytics.py  test_integration.py  test_pricer.py
