[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.11", "cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "quantiv"
version = "1.0.0"
description = "Quantitative Options Pricing Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dynamic = ["dependencies", "authors"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-v --tb=short"
